syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Shemistan/uzum_auth/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc GetUser(GetUser.Request) returns (GetUser.Response);
  rpc GetUsers(GetUsers.Request) returns (GetUsers.Response);
  rpc GetAllUsers(google.protobuf.Empty) returns (GetAllUsers.Response);
  rpc Delete(Delete.Request) returns (google.protobuf.Empty);
  rpc CheckToken(CheckToken.Request) returns (google.protobuf.Empty);


  rpc Create(Create.Request) returns (Create.Response){
    option (google.api.http) = {
      post: "/auth_v1/create"
      body: "*"
    };
  }

  rpc Update(Update.Request) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/auth_v1/update"
      body: "*"
    };
  }

  rpc Auth(Auth.Request) returns (Auth.Response){
    option (google.api.http) = {
      post: "/auth_v1/auth"
      body: "*"
    };
  }

  rpc Healthz(google.protobuf.Empty) returns (google.protobuf.Empty){
    option (google.api.http) = {
      get: "/auth_v1/healthz"
    };
  }


}

message Auth {
  message Request{
    google.protobuf.StringValue login = 1;
    google.protobuf.StringValue password = 2;
    google.protobuf.StringValue refresh_token = 3;
  }


  message Response{
    string access_token = 1 [json_name = "access_token"];
  }
}


message Create {
  message Request{
    User user = 1;
  }


  message Response{
    string access_token = 1 [json_name = "access_token"];
  }
}


message Update {
  message Request{
    User user = 1;
  }
}


message Delete {
  message Request{
    uint32 id = 1;
  }
}



message GetUser {
  message Request{
    uint32 id = 1;
  }

  message Response{
    User user = 1;
  }
}


message GetUsers {
  message Request{
    repeated uint32 id = 1;
  }

  message Response{
    repeated User user = 1;
  }
}


message GetAllUsers {
  message Response{
    repeated User user = 1;
  }
}

message CheckToken {
  message Request{
    string access_token = 1 [json_name = "access_token"];
  }
}

message User {
  string login = 1;
  string password = 2;
  string role = 3;
  google.protobuf.Timestamp date_of_birt = 4  [json_name = "date_of_birt"];
}